--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
     "    target_lines= [line +' <EOS>' for line in target_text.split('\\n')]\n",
     "    \n",
     "    source_id_text = [ [ source_vocab_to_int[word] for word in line.split()] for line in source_lines]\n",
-    "    target_id_text = [ [target_vocab_to_int[word] for word in line.split()] for line in target_lines]\n",
+    "    target_id_text = [ [target_vocab_to_int[word] for word in line.split()]  for line in target_lines]\n",
     "    \n",
     "       \n",
     "    \n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +309,13 @@
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    inputs=tf.placeholder(tf.float32,[None,None],name='input')\n",
+    "    inputs=tf.placeholder(tf.int32,[None,None],name='input')\n",
     "    \n",
-    "    targets= tf.placeholder(tf.float32,[None,None], name=\"targets\")\n",
+    "    targets= tf.placeholder(tf.int32,[None,None], name=\"targets\")\n",
     "    lr= tf.placeholder(tf.float32,shape=[],name='learning_rate')\n",
     "    keep_prob= tf.placeholder(tf.float32,[],name=\"keep_prob\")\n",
-    "    target_sequence_length= tf.placeholder(tf.float32,[None],name=\"target_sequence_length\")\n",
-    "    source_sequence_length= tf.placeholder(tf.float32,[None],name=\"source_sequence_length\")\n",
+    "    target_sequence_length= tf.placeholder(tf.int32,[None],name=\"target_sequence_length\")\n",
+    "    source_sequence_length= tf.placeholder(tf.int32,[None],name=\"source_sequence_length\")\n",
     "    \n",
     "    max_target_len= tf.reduce_max(target_sequence_length,name=\"max_target_len\")\n",
     "    \n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 109,
    "metadata": {
     "scrolled": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, start_of_sequence_id,\n",
     "                         end_of_sequence_id, max_target_sequence_length,\n",
@@ -528,8 +535,17 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: BasicDecoderOutput containing inference logits and sample_id\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    start_tokens=tf.tile(tf.constant([start_of_sequence_id], tf.int32),[batch_size],name='start_tokens')\n",
+    "    \n",
+    "    inference_helper= tf.contrib.seq2seq.GreedyEmbeddingHelper(dec_embeddings,start_tokens,end_of_sequence_id)\n",
+    "    \n",
+    "    inference_decoder = tf.contrib.seq2seq.BasicDecoder(dec_cell, inference_helper,\n",
+    "                                                        encoder_state, output_layer)\n",
+    "    \n",
+    "    decoder_output,_= tf.contrib.seq2seq.dynamic_decode(inference_decoder\n",
+    "                                                        ,impute_finished=True\n",
+    "                                                        ,maximum_iterations=max_target_sequence_length)\n",
+    "    return decoder_output\n",
     "\n",
     "\n",
     "\n",
@@ -557,11 +573,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer(dec_input, encoder_state,\n",
     "                   target_sequence_length, max_target_sequence_length,\n",
@@ -583,8 +605,50 @@
     "    :param decoding_embedding_size: Decoding embedding size\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \n",
+    "    ### Embed the target sequences\n",
+    "    decoder_embedding=tf.Variable(tf.random_uniform([target_vocab_size,decoding_embedding_size]))\n",
+    "    decoder_embdedded_input = tf.nn.embedding_lookup(decoder_embedding,dec_input)\n",
+    "    \n",
+    "    ### Construct the decoder LSTM cell\n",
+    "    def make_lstm_cell(rnn_size):\n",
+    "        return  tf.contrib.rnn.LSTMCell(rnn_size,\n",
+    "                                       initializer= tf.random_uniform_initializer(-0.1,0.1))\n",
+    "    \n",
+    "    decoder_cell= tf.contrib.rnn.MultiRNNCell([ make_lstm_cell(rnn_size) for _ in range(num_layers)])\n",
+    "    \n",
+    "    \n",
+    "    ###Create an output layer to map the outputs of the decoder to the elements of our vocabulary\n",
+    "    output_layer= Dense(target_vocab_size, \n",
+    "                        kernel_initializer=tf.truncated_normal_initializer(mean=0.0,stddev=0.1))\n",
+    "    \n",
+    "    ### Get the training and inference logits\n",
+    "    \n",
+    "    with tf.variable_scope(\"decode\") as decode_scope:\n",
+    "        \n",
+    "        training_logits= decoding_layer_train(encoder_state, decoder_cell,decoder_embdedded_input\n",
+    "                                              ,target_sequence_length, max_target_sequence_length\n",
+    "                                              , output_layer, keep_prob)\n",
+    "\n",
+    "        \n",
+    "        start_of_sequence_id = target_vocab_to_int['<GO>']\n",
+    "        end_of_sequence_id = target_vocab_to_int['<EOS>']\n",
+    "        \n",
+    "        decode_scope.reuse_variables()\n",
+    "        \n",
+    "        inference_logits= decoding_layer_infer(encoder_state\n",
+    "                                               ,decoder_cell\n",
+    "                                               ,decoder_embedding\n",
+    "                                               ,start_of_sequence_id\n",
+    "                                               ,end_of_sequence_id\n",
+    "                                               ,max_target_sequence_length\n",
+    "                                               ,target_vocab_size\n",
+    "                                               ,output_layer\n",
+    "                                               ,batch_size\n",
+    "                                               ,keep_prob)\n",
+    "    \n",
+    "    \n",
+    "    return training_logits, inference_logits\n",
     "\n",
     "\n",
     "\n",
@@ -608,11 +672,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size,\n",
     "                  source_sequence_length, target_sequence_length,\n",
@@ -637,8 +707,22 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \n",
+    "    ### Get the encoder state\n",
+    "    _, encoder_state= encoding_layer(input_data, rnn_size, num_layers, keep_prob\n",
+    "                                     ,source_sequence_length,source_vocab_size,enc_embedding_size)\n",
+    "    \n",
+    "    ### Process target data\n",
+    "    decoder_input= process_decoder_input(target_data, target_vocab_to_int, batch_size)\n",
+    "    \n",
+    "    ### Decode the encoded input \n",
+    "    training_decoder_op, inference_decoder_op= decoding_layer(decoder_input, encoder_state\n",
+    "                                                              , target_sequence_length, max_target_sentence_length\n",
+    "                                                              , rnn_size, num_layers, target_vocab_to_int\n",
+    "                                                              , target_vocab_size, batch_size, keep_prob\n",
+    "                                                              , dec_embedding_size)\n",
+    "    \n",
+    "    return training_decoder_op, inference_decoder_op\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -668,28 +752,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 5\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 256\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 2\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 256\n",
+    "decoding_embedding_size = 256\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.01\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None\n",
-    "display_step = None"
+    "keep_probability = 0.8\n",
+    "display_step = 10"
    ]
   },
   {
@@ -702,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -768,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
@@ -818,12 +902,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch   10/538 - Train Accuracy: 0.2699, Validation Accuracy: 0.3526, Loss: 3.2718\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-8b554ffa681f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     46\u001b[0m                  \u001b[0mtarget_sequence_length\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtargets_lengths\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m                  \u001b[0msource_sequence_length\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0msources_lengths\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m                  keep_prob: keep_probability})\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    776\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    777\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 778\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    779\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    780\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    980\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    981\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[1;32m--> 982\u001b[1;33m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[0;32m    983\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    984\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_run\u001b[1;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1030\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1031\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[1;32m-> 1032\u001b[1;33m                            target_list, options, run_metadata)\n\u001b[0m\u001b[0;32m   1033\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1034\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_call\u001b[1;34m(self, fn, *args)\u001b[0m\n\u001b[0;32m   1037\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1038\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1039\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1040\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1041\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[1;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[0;32m   1019\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[0;32m   1020\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1021\u001b[1;33m                                  status, run_metadata)\n\u001b[0m\u001b[0;32m   1022\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1023\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -916,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -938,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -970,11 +1077,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -983,8 +1096,16 @@
     "    :param vocab_to_int: Dictionary to go from the words to an id\n",
     "    :return: List of word ids\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    sentence=sentence.lower()\n",
+    "    #word_to_ids=[ [ vocab_to_int.get(word,vocab_to_int['<UNK>']) for word in words] for words in sentence.split()]\n",
+    "    \n",
+    "    word_to_ids=[ vocab_to_int.get(words,vocab_to_int[\"<UNK>\"]) for words in sentence.split()]\n",
+    "    \n",
+    "    \n",
+    "    return word_to_ids\n",
+    "\n",
+    " \n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
